# artistos-ai

./: README.md  pyproject.toml
app/: llm.py  main.py
app/agents/: final_response.py  marketing.py  release.py  supervisor.py
app/graph/: state.py  workflow.py
app/tools/: search.py
