[project]
name = "artistos-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.8",
    "langchain>=0.3.30",
    "langchain-ollama>=1.1.0",
    "langgraph>=0.6.11",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.51.0",
]
