[project]
name = "artistos-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.128.8",
    "langchain>=0.3.30",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=0.6.11",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.51.0",
]
